<resources>
     <string name="app_name" translatable="false">MobiWare</string>
     <string name="title_activity_splash" translatable="false">MobiWare</string>

     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="profile_image">Profile Image</string>
     <string name="device_name">Device Name</string>
     <string name="please_wait">Please Wait</string>

     <string name="please_click_back_again">Click Again To Exit</string>
     <string name="hardware">Hardware</string>
     <string name="software">Software</string>
     <string name="battery_info">Battery Info</string>
     <string name="settings">Settings</string>
     <string name="send_feedback">Send Feedback</string>

     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="email">Email</string>
     <string name="text_update_activity">An update is available!</string>
     <string name="later">Later</string>
     <string name="update">Update</string>
     <string name="dont_show_again">Don\'t show again</string>
     <string name="type_message_feedback">Type your message here…</string>
     <string name="send">Send</string>
     <string name="application_theme">Application Theme</string>
     <string name="getting_device_specs">Retrieving Phone Specifications</string>

     <string name="process_name">process_name</string>
     <string name="sign_up">Sign Up</string>
     <string name="username">Username</string>
     <string name="optional">Optional</string>
     <string name="blank_username">Username is required!</string>
     <string name="registering_user">Registering User…</string>
     <string name="profile">Profile</string>
     <string name="please_update_to_continue">Please update to continue</string>
     <string name="select_your_phone_model">Select your phone model</string>
     <string name="password">Password</string>
     <string name="phone_number">Phone Number</string>
     <string name="already_have_account_sign_in">Already have account? Sign In</string>
     <string name="sign_out">Sign Out</string>
     <string name="username_5_or_more_letters">At least 5 letters are required</string>
     <string name="at_least_a_letter">Must include minimum a letter</string>
     <string name="no_special_symbols_allowed">Special symbols are not allowed</string>
     <string name="password_at_least_6_chars">Minimum 6 characters</string>
     <string name="sign_in">Sign In</string>
     <string name="no_account_register">No Account? Register</string>
     <string name="user_exists">User exists. Please sign In</string>
     <string name="user_does_not_exist">User does not exist</string>
     <string name="password_is_wrong">Password is invalid</string>
     <string name="error_occurred">Error occurred</string>
     <string name="no_connection_error">Please check internet connection</string>
     <string name="select_a_phone_error">Please select a phone</string>
     <string name="smth_went_wrong">Something went wrong. Try again later</string>
     <string name="smth_went_wrong_check_connection">Something went wrong. Check connection</string>
     <string name="could_not_find_your_phone_model">Search system could not find your phone model. Please insert manually:</string>
     <string name="phone_model">Phone Model</string>
     <string name="submit">Submit</string>
     <string name="no_empty_input">Please enter text or attach image</string>
     <string name="too_short_enter_valid">Model name is too short</string>
     <string name="login">Log In</string>
     <string name="profile_updated_success">Profile updated successfully</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="reset_password">Change your password</string>
     <string name="reset">Reset</string>
     <string name="reset_email_has_sent">Email for resetting password is sent</string>
     <string name="reset_email_confirm_send">A link for resetting password will be sent by mail</string>
     <string name="a_email_for_resetting">An email for resetting password will be sent to your email address</string>
     <string name="no_profile_detail_change">No profile detail found to update</string>
     <string name="only_numbers">Enter only digits</string>
     <string name="error_mobile_short">At least 9 digits</string>
     <string name="smth_went_wrong_only">Something went wrong</string>
     <string name="check_connection_if_too_long">Check connection, if process took too long</string>
     <string name="denied_permission">You denied the permission for storage access. Confirm to open app settings, and change permission</string>
     <string name="feedback_successfully">Feedback sent successfully</string>
     <string name="cpu" translatable="false">CPU</string>
     <string name="ram" translatable="false">RAM</string>
     <string name="os" translatable="false">OS</string>
     <string name="display">Display</string>
     <string name="brands">Brands</string>
     <string name="top_devices">Top Devices</string>
     <string name="latest_devices">Latest Devices</string>
     <string name="memory">Memory</string>
     <string name="platform">Platform</string>
     <string name="main_camera">Main Camera</string>
     <string name="selfie_camera">Selfie Camera</string>
     <string name="launch">Launch</string>
     <string name="body">Body</string>
     <string name="battery">Battery</string>
     <string name="comms">Communication</string>
     <string name="my_devices">My Devices</string>
     <string name="add_image">Add Image</string>
     <string name="image">Image</string>
     <string name="null_email_placeholder_for_feedback">ktx.development@gmail.com</string>
     <string name="feedback">Feedback</string>
     <string name="email_cannot_change">Email cannot be changed</string>
     <string name="no_free_spaces_allowed">Free spaces are not allowed</string>
     <string name="delete_account">Delete Account</string>
     <string name="contact">Contact</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
     <string name="system_default">System default</string>
     <string name="light_mode">Light Mode</string>
     <string name="app_will_restart_once">App will restart once the theme changes</string>
     <string name="about">About</string>
     <string name="rate_app">Rate App</string>
     <string name="api_url">github.com.azharimm/phone-specs-api</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="close">Close</string>
     <string name="application_version">Application Version:</string>
     <string name="api_database">API (Database):</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="share_app">Share App</string>
     <string name="dark_mode">Dark Mode</string>
     <string name="_1">1</string>
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>

     <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>

     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
     <string name="attachment_title">Download incoming attachments</string>
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested
     </string>
     <string name="open">Open</string>
     <string name="account_deleted_permanently">Your account will be deleted permanently</string>
     <string name="terms_and_conditions">Terms and Conditions</string>


</resources>