<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/artboard_main_background">

     <com.google.android.material.appbar.MaterialToolbar
          app:titleTextAppearance="@style/ActionBarTextStyle"
          android:id="@+id/toolbarForgotPassword"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:layout_marginHorizontal="@dimen/_10sdp"
          android:background="@color/purple_700"
          android:backgroundTint="@color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:navigationIcon="@drawable/ic_back"
          app:title="@string/reset_password"
          app:titleTextColor="@color/cyan" />

     <TextView
          android:id="@+id/tvResetPassUseless"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/_25sdp"
          android:gravity="center_horizontal"
          android:text="@string/a_email_for_resetting"
          android:textColor="@color/orange"
          android:textSize="@dimen/default_text_size"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/circleImageView"
          app:layout_constraintVertical_bias="0.03"
          tools:layout_editor_absoluteX="26dp" />


     <ImageView
          android:id="@+id/circleImageView"
          android:layout_width="@dimen/_80sdp"
          android:layout_height="@dimen/_80sdp"
          android:contentDescription="@string/app_name"
          android:src="@drawable/reset_password"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/toolbarForgotPassword"
          app:layout_constraintVertical_bias="0.02" />

     <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilUseless15"
          style="@style/Theme.SpecialTextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/_20sdp"
          android:hint="@string/email"
          app:errorEnabled="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvResetPassUseless"
          app:layout_constraintVertical_bias="0.05"
          app:startIconDrawable="@drawable/ic_mail">

          <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etResetPasswordEmail"
               style="@style/SpecialEdiText"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:inputType="textPersonName"
               android:maxLength="@integer/email_max_length"
               android:textSize="@dimen/default_text_size" />

     </com.google.android.material.textfield.TextInputLayout>


     <Button
          android:id="@+id/btnResetPassword"
          style="@style/Theme.SpecialButton"
          android:layout_width="@dimen/_120sdp"
          android:layout_height="wrap_content"
          android:padding="@dimen/button_padding"
          android:text="@string/reset"
          android:textSize="@dimen/button_text_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tilUseless15" />


</androidx.constraintlayout.widget.ConstraintLayout>