<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/artboard_1">


    <androidx.appcompat.widget.Toolbar
        app:title="@string/profile"
        app:titleTextColor="@color/white"
        android:backgroundTint="@color/main"
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbarProfile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civProfile"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="10"
                android:src="@drawable/ic_account"
                app:civ_border_color="@color/civ_border"
                app:civ_border_width="@dimen/_2sdp"
                app:layout_constraintBottom_toTopOf="@id/tilUseless3"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUseless3"
                style="@style/Theme.SpecialTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/username"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_account"
                app:layout_constraintBottom_toTopOf="@id/tilUseless4"
                app:layout_constraintTop_toBottomOf="@+id/civProfile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsernameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUseless4"
                style="@style/Theme.SpecialTextInputLayout"
                app:startIconDrawable="@drawable/ic_baseline_mail_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailProfile"
                    android:focusable="false"
                    android:textColor="@color/teal_700"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/codePicker"
                    app:layout_constraintVertical_bias="0.36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUseless9"
                    style="@style/Theme.SpecialTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/phone_number"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/codePicker">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobileNumberProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <Button
                android:id="@+id/btnProfileUpdate"
                style="@style/Theme.SpecialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_30sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/update"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>